packages/compiler/tests/snapshots/snapshot_tests__snapshot_constant_declaration.snap
---
source: tests/snapshot_tests.rs
expression: ast
---
statements:
  - ConstantAssignment:
      variable: PI
      value:
        Literal:
          value:
            Number: 3.14159
          literal_type: number
