packages/compiler/tests/snapshots/snapshot_tests__snapshot_empty_array.snap
---
source: tests/snapshot_tests.rs
expression: ast
---
statements:
  - Assignment:
      variable: empty
      value:
        Array:
          elements: []
